--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -65,7 +65,7 @@
 							<div ng-controller="ModalDemo2Ctrl">
 								<script type="text/ng-template" id="myModalContent2.html">
 														<form name="form1" role="form"  >
-															<div class="modal-header"><h4 class="modal-title custom-font">Add Schedule</h4></div>
+															<div class="modal-header"><h4 class="modal-title custom-font">Add Credential Schedule</h4></div>
 															<div class="modal-body mt-5 pb-30">
 																<div class="row">
 																	<div class="col-sm-12 col-md-6 form-group">
