--- a/views/tmpl/admin/user/view-user.html
+++ b/views/tmpl/admin/user/view-user.html
@@ -142,7 +142,7 @@
 																			<td>{{phone_code.Detail.phone_code}}</td>
 																			<td>{{phone_code.Door_Name}}</td>
 																			<td>
-																				<div ng-repeat="phone in phone_code.Detail.phone_numbers">{{phone}}</div>
+																				<div ng-repeat="phone in phone_code.Detail.phone_numbers">{{phone.phone_number}}</div>
 																			</td>
 																			<td>
 																				{{phone_code.status==0?'Inactive':'Active'}}
