--- a/views/tmpl/setupWizard.html
+++ b/views/tmpl/setupWizard.html
@@ -52,6 +52,7 @@
                                     <input type="text" name="door_name" id="door_name" class="form-control" ng-model="doorname" placeholder="" maxlength="30"
                                         required>
                                     <span class="error" ng-if="validDoor && door.door_name.$invalid">Please Enter Door Name</span>
+                                    <span class="error" ng-if="errormsg">{{errMsg}}</span>
                                 </div>
                                 <div class="form-group col-sm-6 col-md-6 last" style="display:none">
                                     <label for="">Description </label>
