--- a/elika-warehouse/views/header.html
+++ b/elika-warehouse/views/header.html
@@ -43,7 +43,7 @@
 	</div>
 	
 	<ul class="nav-right pull-right list-inline headmenu">
-		<li class="dropdown messages" uib-dropdown>
+		<!--li class="dropdown messages" uib-dropdown>
 			<a href class="dropdown-toggle" uib-dropdown-toggle>
 				<img src="images/bell.png" class="sm-img"><span class="badge bg-lightred">4</span>
 			</a>
@@ -107,7 +107,7 @@
 					<a ui-sref="app.notifications">Show all notifications <fa name="angle-right" class="pull-right"></fa></a>
 				</div>
 			</div>
-		</li>
+		</li-->
 		<li class="dropdown nav-profile" uib-dropdown>
 			<a href class="dropdown-toggle" uib-dropdown-toggle>
 				<img src="images/avatar.jpg" alt="" class="img-circle size-30x30">
