--- a/styles/custom.css
+++ b/styles/custom.css
@@ -156,6 +156,10 @@ textarea.form-control {
     position: relative;
 }
 
+.modal-dialog .profilephoto {
+	padding-bottom: 16px;
+}
+
 .profilephoto .user-profilep {
     font-size: 13px;
     position: absolute;
@@ -1870,6 +1874,8 @@ md-card:hover .moreitemsondevice {
 .page-login.core-new {
     background: url(../images/loginbg-new.jpg) top right no-repeat;
     background-size: cover;
+	overflow: hidden;
+    overflow-y: auto;
 }
 
 .welcometxt {
@@ -2776,8 +2782,8 @@ span.edittxt {
     color: #3c8719;
     font-weight: 500;
     cursor: pointer;
-	text-transform: uppercase;
-	font-size: 17px;
+    text-transform: uppercase;
+    font-size: 17px;
 }
 
 .backpage .dropdown-menu > li > a {
@@ -2942,10 +2948,9 @@ span.edittxt {
 }
 
 .listview .glview md-card md-card-content .list-view {
-    display: table-cell;
-    width: 33%;
+	float: left;
+    width: 30%;
 }
-
 
 .disable-button {
     pointer-events: none;
@@ -3015,34 +3020,34 @@ span.edittxt {
 .btn-toolbar button {
     width: 36px;
     padding: 0;
-	margin: 0 5px 0 0;
+    margin: 0 5px 0 0;
 }
 
 .filterorder button.list-icon {
-	background: transparent;
+    background: transparent;
     border: 1px solid #d5d5d5;
     width: 42px;
     height: 42px;
     margin-top: -4px;
     border-radius: 3px;
-	transition: 0.5s;
+    transition: 0.5s;
 }
 
 .filterorder button.list-icon:hover {
-	background: #357935;
+    background: #357935;
     border: 1px solid #357935;
-	color: #ffffff;
+    color: #ffffff;
 }
 
 .btn-toolbar button.md-raised,
 .btn-toolbar button:hover {
-	background: #357935!important;
+    background: #357935!important;
     color: #fff;
     box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.15)!important;
 }
 
 .error.layout {
-	text-align: center;
+    text-align: center;
     display: block;
     margin: 75px 0 50px;
     color: #e60000;
@@ -3491,12 +3496,20 @@ span.edittxt {
         max-height: 355px;
         min-height: 355px;
     }
+	.filterorder button.list-icon {
+		width: 38px;
+		height: 38px;
+	}	
 }
 
 @media only screen and (max-width: 1399px) {
     .page-login.core-new {
         padding-left: 388px;
     }
+	.filterorder button.list-icon {
+		width: 38px;
+		height: 38px;
+	}
 }
 
 @media only screen and (max-width: 1365px) {
@@ -4020,6 +4033,12 @@ span.edittxt {
     .card-container .card .noback {
         height: 140px;
     }
+	.listview .glview md-card md-card-content .list-view {
+		width: 45%;
+	}
+	.created_by {
+		display: none!important;
+	}
 }
 
 @media only screen and (max-width: 767px) {
@@ -4053,19 +4072,14 @@ span.edittxt {
     .glview md-card:nth-child(2n+2) {
         margin-right: 0;
     }
-    .hometabs .tile-body.table-custom .row .col-sm-3.col-md-3.filterorder {
-        width: 30%;
-        float: left;
-        text-align: left;
-    }
     .hometabs .tile-body.table-custom .row .col-sm-6.col-md-6 {
-        width: 51%;
+        width: 50%;
         float: left;
+		margin-bottom: 0!important;
     }
     .hometabs .tile-body.table-custom .row .col-sm-3.col-md-3 {
         float: left;
-        width: 19%;
-        text-align: right;
+        width: 25%;
     }
     .hometabs .tile-body.table-custom .row .col-sm-3.col-md-3 .gridlistbar label,
     .wrap-reset .table-custom .row .col-sm-3.col-md-4 .gridlistbar label {
@@ -4238,14 +4252,6 @@ span.edittxt {
         float: none;
         display: block;
     }
-    .hometabs .tile-body.table-custom .row .col-sm-3.col-md-3.filterorder,
-    .wrap-reset .table-custom .row .col-sm-4.col-md-4.filterorder {
-        width: 100%;
-        float: left;
-        text-align: left;
-        margin-top: 0;
-        display: none;
-    }
     .search {
         padding: 0 15px;
         width: 100%;
@@ -4258,16 +4264,6 @@ span.edittxt {
         float: left;
         margin-right: 0;
         text-align: left;
-    }
-    .hometabs .tile-body.table-custom .row .col-sm-3.col-md-3 {
-        float: right;
-        width: 50%;
-        text-align: right;
-        margin-top: -38px;
-    }
-    .hometabs .tile-body.table-custom .row .col-sm-6.col-md-6 {
-        width: 100%;
-        float: left;
     }
     .listview .glview md-card {
         padding: 0 0 50px;
@@ -4310,6 +4306,17 @@ span.edittxt {
     }
     .schedule_scroll {
         width: 300px;
+    }
+	.gridlistbar {
+		display: none!important;
+	}
+	.hometabs .tile-body.table-custom .row .col-sm-6.col-md-6 {
+        width: 70%;
+        float: left;
+    }
+    .hometabs .tile-body.table-custom .row .col-sm-3.col-md-3 {
+        float: left;
+        width: 30%;
     }
 }
 
