--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -148,39 +148,12 @@
 					<div class="hometabs">
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-40">
-								<div class="col-sm-3 col-md-3 filterorder">
-									<div class="btn-group pull-left">
-										<button class="list-icon" ng-click="refreshList()"><i class="fa fa-refresh"></i></button>
-									</div>
+								<div class="col-sm-3 col-md-3 refresh_btn">
+									<button class="list-icon" ng-click="refreshList()"><i class="fa fa-refresh"></i></button>
 								</div>
-								<div class="col-sm-6 col-md-6">
-									<div class="row">
-										<div class="col-sm-8 col-md-9 search">
-											<input type="text" class="form-control" ng-model="searchText" maxlength="50" placeholder="Search by text...." ng-keyup="searchFunction($event)">
-											<button class="btn btn-default br-2-r" type="button" ng-click="searchFunction()">Search</button>
-										</div>
-										<!-- <div class="col-sm-4 col-md-3 profilephoto csvupload">
-											<div ng-controller="ModalDemo2Ctrl">
-												<script type="text/ng-template" id="myModalContent2.html">
-													<form name="form1" role="form">
-														<div class="modal-header"><h4 class="modal-title custom-font">Upload CSV File</h4></div>
-														<div class="modal-body mt-5 pb-30 mb-40">
-															<label for="">Upload CSV file</label>
-															<div class="profilephoto">
-																<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
-																<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
-															</div>											
-														</div>
-														<div class="modal-footer">
-															<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Cancel</button>
-															<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Save</button>	
-														</div>
-													</form>		
-												</script>
-												<span ng-click="open()" class="group-span-filestyle input-group-btn"><label class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
-											</div>
-										</div> -->
-									</div>
+								<div class="col-sm-6 col-md-6 search">									
+									<input type="text" class="form-control" ng-model="searchText" maxlength="50" placeholder="Search by text...." ng-keyup="searchFunction($event)">
+									<button class="btn btn-default br-2-r" type="button" ng-click="searchFunction()">Search</button>
 								</div>
 								<div class="col-sm-3 col-md-3">
 									<div class="gridlistbar ta-r pull-right" style="display: block;">
@@ -189,20 +162,6 @@
 										<a href="" class="grid-icon" ng-class="{active: layout == 'grid'}" ng-click="changeaClass()"><i class="fa fa-th" aria-hidden="true"></i></a>
 									</div>
 								</div>
-								<!--<div class="filterfields" ng-hide="filtershow">
-									<div class="col-sm-4 col-md-3">
-										<label for="fbtext" class="control-label">Search by text</label> 
-										<input type="text" class="form-control" id="fbtext" ng-model="text">
-									</div>
-									<div class="col-sm-4 col-md-3">
-										<label for="fbtitle" class="control-label">Search by title</label>
-										<input type="text" class="form-control" id="fbtitle" ng-model="title">
-									</div>
-									<div class="col-sm-4 col-md-3">
-										<label for="fblocation" class="control-label">Search by facility</label>
-										<input type="text" class="form-control" id="fblocation" ng-model="facility">
-									</div>
-								</div>-->
 							</div>
 							<div ng-if="result">
 								<div layout="row" ng-class="statusclass">
@@ -261,7 +220,7 @@
 									            <!-- <p> 302342</p> -->
 									           </div>
 
-									           <div class="list-view grid-hide">
+									           <div class="list-view grid-hide created_by">
 									            <h2 class="md-title"> Created By</h2>
 									            <p> {{ device.device_created_by_name }} </p>
 									            <!-- <p> Door Name </p> -->
