--- a/views/tmpl/admin/camera/camera-dvr.html
+++ b/views/tmpl/admin/camera/camera-dvr.html
@@ -195,15 +195,15 @@
 									<div class="wrap-reset ">
 										<div class="profile-settings ">
 											<div class="row ">
-												<div class="col-sm-12 col-md-9 col-centered ">
-													<div class="col-sm-3 col-md-3 ">
+												<div class="col-sm-12 col-md-12 col-centered ">
+													<div class="form-group col-sm-3 col-md-3 ">
 														<label for=" ">Facility <span class="text-danger">*</span></label><br/>
 														<select class="form-control" ng-disabled="facility_disable" ng-model="recordedFeedsSearchObj.facility" ng-options="facility.facility_id as facility.facility_name for facility in facilityList track by facility.facility_id">
 															<option value="">Select Facility</option>
 
 														</select>
 													</div>
-													<div class="col-sm-3 col-md-3 " ng-controller="DatepickerDemoCtrl ">
+													<div class="form-group col-sm-3 col-md-3 " ng-controller="DatepickerDemoCtrl ">
 														<label for=" ">Date <span class="text-danger">*</span></label>
 														<div class="input-group ">
 															<input type="text " class="form-control " uib-datepicker-popup="{{format}} " ng-model="recordedFeedsSearchObj.dt " is-open="opened
@@ -214,14 +214,14 @@
 															</span>
 														</div>
 													</div>
-													<div class="col-sm-3 col-md-3 validtime ">
-														<label for=" ">Time <small>(Includes 10 min before & after)</small> <span class="text-danger">*</span></label>
+													<div class="form-group col-sm-3 col-md-3 validtime ">
+														<label for=" ">Time <small>(include 10min before & after)</small><span class="text-danger">*</span></label>
 														<span ng-controller="TimepickerDemoCtrl ">
 															<uib-timepicker ng-model="mytime " ng-change="changed() " hour-step="hstep " minute-step="mstep
 												 " show-meridian="ismeridian "></uib-timepicker>
 														</span>
 													</div>
-													<div class="col-sm-3 col-md-3 validtime ">
+													<div class="form-group col-sm-3 col-md-3 validtime ">
 														<label for=" ">&nbsp;</label><br/>
 														<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a " ng-click="getCamerasOnSearchItems() ">Search</button>
 														<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a " ng-click="resetRecordedCamSearchCriteria()">Reset</button>
