--- a/views/tmpl/setupWizard.html
+++ b/views/tmpl/setupWizard.html
@@ -1,6 +1,6 @@
 
 <div class="page page-core page-login core-new">
-	<div class="w-450 m0auto bg-white login-box-shadow borderradius6 submit_wizard">
+	<div class="submit_wizard login-box-shadow borderradius6">
 		<wizard on-finish="submitWizard()">
 			
 			<wz-step wz-title="Add Facility" ng-form="addFacility">
