--- a/views/tmpl/setupWizard.html
+++ b/views/tmpl/setupWizard.html
@@ -1,5 +1,4 @@
-
-<div class="page page-core page-login core-new">
+<div class="page page-core submitwizard"> 
 	<div class="submit_wizard login-box-shadow borderradius6">
 		<wizard on-finish="submitWizard()">
 			
